# torch_validator

./: .dockerignore  .gitignore  README.md  TODO.md  pyproject.toml
container/: Dockerfile  Makefile
examples/: torchtitan_integration.py  train_with_validation.py
scripts/: crosshost_validate.sh  multihost_summary.sh  multihost_validate.sh  run_long.sh  run_memory.sh  run_quick.sh  run_smoke.sh  run_suite.sh  test_local_determinism.sh  validate_against_golden.sh
src/torch_validator/: __init__.py  _version.py  deterministic.py  env_fingerprint.py  metrics.py  verifier.py
src/torch_validator/stress_tests/: __init__.py  base.py  runner.py  test_compile.py  test_compile_local.py  test_fsdp.py  test_memory.py  test_nccl.py  test_nocompile_thermal.py  test_transformer.py
tests/: __init__.py  test_verifier.py
